[gd_scene load_steps=19 format=3 uid="uid://1pbsc0n22mos"]

[ext_resource type="Script" uid="uid://bc57thurrsj8r" path="res://scrips/Enemy.gd" id="1_s7bn3"]
[ext_resource type="Texture2D" uid="uid://c3gfo7rof6u0p" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 01.png" id="2_82o86"]
[ext_resource type="Texture2D" uid="uid://cxo78s8rncdrk" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 02.png" id="3_1gqeq"]
[ext_resource type="Texture2D" uid="uid://ctt16hwy5aumn" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 03.png" id="4_isvm2"]
[ext_resource type="Texture2D" uid="uid://bv8lgxei1xhak" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 04.png" id="5_gr8dl"]
[ext_resource type="Texture2D" uid="uid://diwyp2kmgj8um" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 05.png" id="6_axa8o"]
[ext_resource type="Texture2D" uid="uid://c4txgmwqapbah" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 06.png" id="7_4iqch"]
[ext_resource type="Texture2D" uid="uid://ce31om4chmwnd" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 07.png" id="8_x3f71"]
[ext_resource type="Texture2D" uid="uid://chw77irg364d0" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 08.png" id="9_ksmwx"]
[ext_resource type="Texture2D" uid="uid://b06vi0x166m4m" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 09.png" id="10_oq86d"]
[ext_resource type="Texture2D" uid="uid://jarcisrbb5xj" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 01.png" id="11_axa8o"]
[ext_resource type="Texture2D" uid="uid://bliws834rfyvk" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 02.png" id="12_4iqch"]
[ext_resource type="Texture2D" uid="uid://ckotu7mldi6k7" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 03.png" id="13_x3f71"]
[ext_resource type="Texture2D" uid="uid://3iti2gtvw646" path="res://sprites/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 04.png" id="14_ksmwx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6d4v"]
size = Vector2(20, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_52xpa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_axa8o")
}, {
"duration": 1.0,
"texture": ExtResource("12_4iqch")
}, {
"duration": 1.0,
"texture": ExtResource("13_x3f71")
}, {
"duration": 1.0,
"texture": ExtResource("14_ksmwx")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_82o86")
}, {
"duration": 1.0,
"texture": ExtResource("3_1gqeq")
}, {
"duration": 1.0,
"texture": ExtResource("4_isvm2")
}, {
"duration": 1.0,
"texture": ExtResource("5_gr8dl")
}, {
"duration": 1.0,
"texture": ExtResource("6_axa8o")
}, {
"duration": 1.0,
"texture": ExtResource("7_4iqch")
}, {
"duration": 1.0,
"texture": ExtResource("8_x3f71")
}, {
"duration": 1.0,
"texture": ExtResource("9_ksmwx")
}, {
"duration": 1.0,
"texture": ExtResource("10_oq86d")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Theme" id="Theme_55jtl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_55jtl"]
size = Vector2(34, 22)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_s7bn3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_e6d4v")

[node name="Animatii" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_52xpa")
animation = &"Attack"
autoplay = "default"
frame_progress = 0.0406176

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
modulate = Color(0.0901961, 0.188235, 1, 1)
offset_left = -2.0
offset_top = -44.0
offset_right = 2.0
offset_bottom = -17.0
theme = SubResource("Theme_55jtl")

[node name="Hitbox_pentru_attack" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_pentru_attack"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_55jtl")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="Hitbox_pentru_attack" to="." method="_on_Area2D_body_entered"]
[connection signal="area_exited" from="Hitbox_pentru_attack" to="." method="_on_Area2D_body_exited"]
[connection signal="area_shape_entered" from="Hitbox_pentru_attack" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Hitbox_pentru_attack" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Hitbox_pentru_attack" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Hitbox_pentru_attack" to="." method="_on_body_exited"]
[connection signal="ready" from="DamageTimer" to="." method="_ready"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
